the_project/manifests_google_gw/statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: to-do-stset
  namespace: project
spec:
  serviceName: to-do-svc
  replicas: 1
  selector:
    matchLabels:
      app: to-do-app
  template:
    metadata:
      labels:
        app: to-do-app
    spec:
      volumes:
        - name: project-cache
          persistentVolumeClaim:
            claimName: project-cache-claim
      containers:
        - name: to-do-back
          image: titunidoc/devops_kubernetes:back_3.5
        - name: db
          image: postgres
          ports:
            - name: web
              containerPort: 5432
          volumeMounts: 
          - name: postgres-data-storage
            mountPath: /var/lib/postgresql
            subPath: postgres
        - name: to-do-front
          image: titunidoc/devops_kubernetes:front_3.5
          volumeMounts:
          - name: project-cache
            mountPath: /usr/src/app/files
            subPath: cache 
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
        namespace: project
      spec:
        accessModes: ["ReadWriteMany"]
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 100Mi
