the_project/manifests_google_gw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: to-do-app
---
apiVersion: v1
kind: Service
metadata:
  name: to-do-back-svc
  namespace: project
spec:
  type: ClusterIP
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3001
  selector:
    app: to-do-app
---
apiVersion: v1
kind: Service
metadata:
  name: to-do-front-svc
  namespace: project
spec:
  type: ClusterIP
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3005
  selector:
    app: to-do-app
